k8s/01-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: hackernews
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---
# =========================
# PostgreSQL StatefulSet
# =========================
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: hackernews
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: manual
        resources:
          requests:
            storage: 5Gi
